<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    
    <string name="app_name">sbJukebox</string>
    
    
    <string name="option_search">Suche</string>
    <string name="option_preferences">Einstellungen</string>
    
    <string name="prefs_cat_connection">Verbindung</string>
    <string name="prefs_domain">Domäne</string>
    <string name="prefs_username">Benutzername</string>
    <string name="prefs_password">Passwort</string>
    <string name="prefs_cat_downloads">Downloads</string>
    <string name="prefs_directory">Verzeichnis</string>
    <string name="prefs_cat_cache">Cache</string>
    <string name="prefs_clear_cache">Cache leeren</string>
    <string name="prefs_clear_cache_message">Alle gecacheten Cover löschen?</string>
<!--     <string name="current_cache_usage">aktuell genutzt</string> -->
    
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">abbrechen</string>
    
    <string name="error_unknown_host">Unbekannter Host</string>
    
    <!-- imported from sbJukebox backend module -->
    
    <string name="labels_artists">Künstler</string>
    <string name="labels_albums">Alben</string>
    <string name="labels_tags">Tags</string>
    <string name="labels_random_artists">Zufällige Künstler</string>
	<string name="labels_random_albums">Zufällige Alben</string>
	<string name="labels_artists_beginning_with">Künstler beginnend mit</string>
	<string name="labels_albums_beginning_with">Alben beginnend mit</string>
	<string name="labels_search_for">Suche nach</string>
	
	<string name="action_search">Suchen</string>
	
    <string name="status_connecting">Verbinden&#8230;</string>
    <string name="status_downloading">Download&#8230;</string>
    <string name="status_extracting">Entpacken&#8230;</string>
    <string name="status_percent_downloaded"> % heruntergeladen</string>
    
</resources>