<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/prefs_cat_connection">
		<EditTextPreference android:title="@string/prefs_domain" android:key="server_domain" android:defaultValue="ollomulder.dyndns.org" android:singleLine="true"></EditTextPreference>
		<EditTextPreference android:title="@string/prefs_username" android:key="server_username" android:defaultValue="ollo" android:singleLine="true"></EditTextPreference>
		<EditTextPreference android:title="@string/prefs_password" android:key="server_password" android:defaultValue="test" android:singleLine="true" android:password="true"></EditTextPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefs_cat_downloads">
		<EditTextPreference android:title="@string/prefs_directory" android:key="downloads_directory" android:defaultValue="/mnt/sdcard/Music/sbJukebox" android:singleLine="true"></EditTextPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefs_cat_cache">
		<Preference android:title="@string/prefs_clear_cache" android:key="clear_cache"></Preference>
	</PreferenceCategory>
</PreferenceScreen>